--- a/roles/install_chatgpt/tasks/main.yml
+++ b/roles/install_chatgpt/tasks/main.yml
@@ -28,5 +28,5 @@
         dest: "{{ chatgpt_location }}/settings.js"
 
     - name: link the script 
-      shell: 'rm -f /usr/bin/chatgpt-cli && cd {{ chatgpt_location }} && cd {{ chatgpt_location }} && chmod +x {{ chatgpt_location }}/chatgpt-cli.sh && ln -s {{ chatgpt_location }}/chatgpt-cli.sh /usr/bin/chatgpt-cli'
+      shell: 'rm -f /usr/bin/chatgpt-cli && cd {{ chatgpt_location }} && chmod +x {{ chatgpt_location }}/chatgpt-cli.sh && ln -s {{ chatgpt_location }}/chatgpt-cli.sh /usr/bin/chatgpt-cli'
 
