initial commit for expose_webserver and install_pandora

--- a/roles/install_chatgpt.yaml
+++ b/roles/install_chatgpt.yaml
@@ -1,6 +1,7 @@
-- name: Tomcat deployment playbook
+- name: Deploy node-chat-api and PandoraAI
   hosts: hcloud
   remote_user: root
   gather_facts: False
   roles:
     - install_chatgpt
+    - install_pandora
